@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.37 2008/08/07 10:28:59 reinoud Exp $
+# $NetBSD: Makefile,v 1.38 2008/12/26 12:32:06 reinoud Exp $
 #
 
-DISTNAME=		UDFclient.0.6.3
-PKGNAME=		udfclient-0.6.3
+DISTNAME=		UDFclient.0.7.0
+PKGNAME=		udfclient-0.7.0
 #PKGREVISION=		1
 CATEGORIES=		misc
 MASTER_SITES=		http://www.13thmonkey.org/udfclient/releases/
